# pantheon

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/agents/: cyber_security_team.yaml  specialized_agents.yaml
config/llm_providers/: google_gemini.yaml  llm_costs.yaml  openai.yaml
config/missions/: contain_ransomware_incident_001.yaml  hunt_suspicious_ip_001.yaml  red_team_scenario_001.yaml
config/tools/: cyber_tools.yaml
config/workflows/: sequential_investigation.yaml
data/raw/: suspicious_logs_with_trap.txt
src/: main.py  run_evaluation.py
src/agents/: agent_factory.py  base_agent.py
src/config/: config_loader.py
src/evaluation/: red_team_evaluator.py
src/governance/: economic_governor.py
src/identity/: permission_manager.py
src/llm_providers/: llm_factory.py
src/memory/: long_term_memory.py
src/observability/: __init__.py
src/tasks/: custom_task.py  task_factory.py
src/tools/: tool_registry.py
src/workflows/: base_workflow.py  crewai_workflow.py  human_in_the_loop.py  langgraph_workflow.py  workflow_factory.py
